Fix homepage property

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/marboleda/cv-project",
+  "homepage": "https://marboleda.github.io/cv-project",
   "name": "cv-project",
   "version": "0.1.0",
   "private": true,
